<resources>
    <string name="app_name">Release Tracker</string>
    <string name="add_library">Add library</string>
    <string name="library_name">Library name</string>
    <string name="library_url">Library URL</string>
    <string name="library_added">Library added successfully</string>
    <string name="library_name_empty">Library name cannot be empty</string>
    <string name="library_url_empty">Library URL cannot be empty</string>
    <string name="library_url_invalid">Library URL is invalid</string>
    <string name="worker_tag">UPDATE_VERSION_WORKER</string>
    <string name="sort">Sort</string>
    <string name="select_sorting_order">Select Sorting Order</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="pinned_first">Pinned first</string>
    <string name="delete">Delete</string>
    <string name="delete_selected_library">Delete \"%s\"?</string>
    <string name="library_deleted">Library deleted successfully</string>
    <string name="last_check_for_updates">Last check: %s</string>
    <string name="no_libraries">There are no libraries</string>
    <string name="night_mode">Night mode…</string>
    <string name="select_night_mode">Select night mode</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="auto">Auto</string>
    <string name="content_description_search">Search for libraries</string>
    <string name="search">Search</string>
    <string name="hint_search">Search libraries</string>
    <string name="pin_library">Pin library</string>
    <string name="unpin_library">Unpin library</string>
    <string name="more_options">More options</string>
    <string name="clear_search_bar">Clear search bar</string>
    <string name="close_search_bar">Close search bar</string>
    <string name="notification_channel_name">General</string>
    <string name="notification_channel_description">All notifications of the app</string>
    <string name="notification_title">Updates Available</string>
    <string name="notification_body">There are updates for the following libraries:\n%s</string>
    <string name="back">Back</string>
    <string name="test_tag_add_library_screen">addLibraryScreen</string>
    <string name="test_tag_add_library_progress_indicator">addLibraryProgressIndicator</string>
    <string name="test_tag_add_library_library_name_text_field">addLibraryLibraryNameTextField</string>
    <string name="test_tag_add_library_library_url_text_field">addLibraryLibraryUrlTextField</string>
    <string name="test_tag_add_library_add_library_button">addLibraryAddLibraryButton</string>
    <string name="test_tag_libraries_list_add_library_button">librariesListAddLibraryButton</string>
    <string name="test_tag_libraries_list_progress_indicator">librariesListProgressIndicator</string>
    <string name="test_tag_libraries_list_library_item">librariesListLibraryItem</string>
    <string name="test_tag_search_bar_close_button">searchBarCloseButton</string>
    <string name="test_tag_search_bar_clear_button">searchBarClearButton</string>
    <string name="test_tag_search_bar_query_text_field">searchBarQueryTextField</string>
    <string name="test_tag_search_bar">searchBar</string>
</resources>