<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/selectNightModeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_normal"
        android:text="@string/select_night_mode"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/nightModeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checkedButton="@id/nightModeOffButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectNightModeTextView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/nightModeOffButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:text="@string/off" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/nightModeOnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:text="@string/on" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/nightModeAutoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_normal"
            android:layout_marginEnd="@dimen/space_normal"
            android:text="@string/auto" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>