<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/sortingOrderTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_normal"
        android:text="@string/select_sorting_order"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sortingOrderAtoZTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/space_normal"
        android:text="@string/a_to_z"
        android:textColor="@color/sl_sorting_order"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortingOrderTextView" />

    <TextView
        android:id="@+id/sortingOrderZtoATextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/space_normal"
        android:text="@string/z_to_a"
        android:textColor="@color/sl_sorting_order"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortingOrderAtoZTextView" />

    <TextView
        android:id="@+id/sortingOrderPinnedFirstTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/space_normal"
        android:text="@string/pinned_first"
        android:textColor="@color/sl_sorting_order"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortingOrderZtoATextView" />

</androidx.constraintlayout.widget.ConstraintLayout>