<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addLibraryRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/addLibraryProgressBar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_progress_bar"
        android:layout_gravity="top"
        android:indeterminate="true"
        android:visibility="gone"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/libraryNameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/libraryNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/library_name"
                android:imeOptions="actionNext"
                android:maxLength="30"
                android:singleLine="true">

                <requestFocus />

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/libraryUrlTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/libraryNameTextInputLayout"
            app:prefixText="@string/github_base_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/libraryUrlEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/library_url"
                android:imeOptions="actionDone"
                android:maxLength="100"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addLibraryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/space_normal"
        android:text="@string/add_library"
        app:layout_behavior=".common.MoveUpwardBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>